--- a/operator/helm-charts/powerful/templates/powerful.yaml
+++ b/operator/helm-charts/powerful/templates/powerful.yaml
@@ -70,7 +70,7 @@ spec:
       - name: app
         env:
         - name: JAVA_OPTS
-          value: "-Dserver.port=8080 -DdefaultCollectBy=stat"
+          value: "-Dserver.port=8080 -DdefaultCollectBy=stat_count"
         - name: APP
           value: {{ $app.name }}
         - name: VERSION
