--- a/powerful-core/pom.xml
+++ b/powerful-core/pom.xml
@@ -99,6 +99,11 @@
       <version>2.4.0.RELEASE</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.flipkart.zjsonpatch</groupId>
+      <artifactId>zjsonpatch</artifactId>
+      <version>0.4.11</version>
+    </dependency>
   </dependencies>
 
   <build>
