--- a/operator/helm-charts/powerful/templates/powerful.yaml
+++ b/operator/helm-charts/powerful/templates/powerful.yaml
@@ -1,4 +1,7 @@
-{{- range $_, $app := .Values.apps }}
+{{- $casesDeploy := unset (set (deepCopy .Values.cases) "version" "default") "name" -}}
+{{- $_ := set .Values.cases "deploys" (list $casesDeploy) -}}
+{{- $_ := set .Values.cases "name" "powerful-cases" -}}
+{{- range $_, $app := append .Values.apps .Values.cases }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -48,6 +51,7 @@ spec:
         framew.zhranklin.io/revision: {{ $.Values.revision }}
 {{- end }}
         sidecar.istio.io/inject: "{{ $deploy.inject | default $.Values.inject }}"
+        checksum/config-volume: {{ $.Files.Get "files/cases.yaml" | sha256sum }}
 {{- if $deploy.annotations }}
 {{ $deploy.annotations | toYaml | indent 8 }}
 {{- end }}
@@ -85,6 +89,9 @@ spec:
           value: {{ $envValue | quote }}
 {{- end }}
 {{- end }}
+        volumeMounts:
+        - name: powerful-cases
+          mountPath: /etc/powerful-cases
 {{- if $deploy.image }}
         image: "{{ $.Values.hub }}/{{ $deploy.image }}"
 {{- else }}
@@ -98,6 +105,10 @@ spec:
         resources:
 {{- $.Values.defaultResources | toYaml | indent 10 }}
 {{ end }}
+      volumes:
+      - name: powerful-cases
+        configMap:
+          name: powerful-cases
       imagePullSecrets:
 {{- range $.Values.imagePullSecrets }}
       - name: {{ . }}
